--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,8 @@ header .intro-text {
 #atividades-desenvolvidas .mensagem > p {
 	font-size: 25px;
 }
-#atividades-desenvolvidas .projeto-texto {
-	height: 143px;
+#atividades-desenvolvidas .projeto-viver-bem {
+	padding-bottom: 3%;
 }
 /* Colabore */
 #colabore {
